[package]
name = "youtube_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
crossterm = "0.26"
log = "0.4"
env_logger = "0.10"
rusty_ytdl = "0.6"
regex = "1.10"
